--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                     <form id="formulario">
                         <!-- Step 1 -->
-<!--                         <section class="step step__active">
+                        <section class="step step__active">
                             <h1 class="tabInfo__title">Personal info</h1>
                             <p class="tabInfo__description margin__top margin__bottom">Please provide your name, email
                                 address, and phone number.</p>
@@ -123,7 +123,7 @@
                                     </button>
                                 </div>
                             </div>
-                        </section> -->
+                        </section>
 
                         <!-- step 2 -->
                         <section class="step step__active">
