--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </section>
 
                         <!-- step 2 -->
-                        <section class="step step__active">
+                        <section class="step">
                             <h1 class="tabInfo__title">Select your plan</h1>
                             <p class="tabInfo__description margin__top margin__bottom">You have the option of monthly or yearly billing.</p>
                             <div class="formulario__flex">
